--- a/Gait Website/V.3/client/package.json
+++ b/Gait Website/V.3/client/package.json
@@ -9,24 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@egjs/react-flicking": "^4.11.2",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
-    "@popperjs/core": "^2.11.8",
+    "@next/swc-win32-x64-msvc": "^14.2.4",
     "bootstrap": "^5.3.3",
-    "embla-carousel-autoplay": "^8.1.2",
-    "embla-carousel-react": "^8.1.2",
     "firebase": "^10.12.2",
     "next": "14.2.3",
+    "next-video": "^1.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-player": "^2.16.0",
-    "react-youtube": "^10.1.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
@@ -35,7 +32,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "next-video": "^1.0.7",
     "typescript": "^5"
   }
 }
